--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,16 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        ports:
+            - 8080:80
+        environment:
+            - PMA_HOST=mysql
+            - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+        networks:
+            - sail
+
 networks:
     sail:
         driver: bridge
